@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.album.universal"
        name="Universal Album Scraper"
-       version="1.3.7"
+       version="1.4.0"
        provider-name="Olympia, Team XBMC">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
     <import addon="metadata.common.last.fm" version="1.3.2"/>
     <import addon="metadata.common.allmusic.com" version="2.3.1"/>
     <import addon="metadata.common.musicbrainz.org" version="1.2.3"/>
-    <import addon="metadata.common.fanart.tv" version="1.0.1"/>
+    <import addon="metadata.common.fanart.tv" version="2.0.0"/>
     <import addon="metadata.common.amazon.de" version="1.0.0"/>
     <import addon="metadata.common.theaudiodb.com" version="1.1.0"/>
   </requires>
