@@ -13,7 +13,7 @@
 
   <category label="30009">
     <setting type="lsep" label="Artwork Settings"/>
-      <setting label="30000" type="bool" id="fanarttvalbumthumbs" default="None" visible="false"/>
+      <setting label="30000" type="bool" id="fanarttvalbumthumbs" default="false"/>
       <setting label="30001" type="bool" id="lastfmalbumthumbs" default="true"/>
       <setting label="30008" type="bool" id="allmusicalbumthumbs" default="true"/>
   </category>
