@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.artists.universal"
        name="Universal Artist Scraper"
-       version="2.1.9"
+       version="2.2.0"
        provider-name="Team XBMC">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
@@ -9,7 +9,7 @@
     <import addon="metadata.common.allmusic.com" version="2.5.2"/>
     <import addon="metadata.common.musicbrainz.org" version="1.2.1"/>
     <import addon="metadata.common.htbackdrops.com" version="1.2.0"/>
-    <import addon="metadata.common.fanart.tv" version="1.1.0"/>
+    <import addon="metadata.common.fanart.tv" version="2.0.0"/>
     <import addon="metadata.common.theaudiodb.com" version="1.2.0"/>
   </requires>
   <extension point="xbmc.metadata.scraper.artists"
