@@ -1,3 +1,6 @@
+[B]2.2.0[/B]
+Added back fanart.tv scraping via JSON API. Still off by default.
+
 [B]2.1.9[/B]
 Temporarily disable fanarttv.com scraping due to site load issues
 
