@@ -1,3 +1,6 @@
+[B]1.4.0[/B]
+Added back fanart.tv scraping via JSON API. Still off by default.
+
 [B]1.3.7[/B]
 Temporarily disable fanarttv.com scraping due to site load issues
 
